Change the index.html

--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -59,10 +59,15 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-topic="Spelling">
-							  Spelling
+							<a class="nav-link" href="#" data-topic="Device">
+							  Device
 							</a>
-						</li>	            		
+						</li>	
+						<li class="nav-item">
+							<a class="nav-link" href="#" data-topic="Junk Food">
+							  Junk Food
+							</a>
+						</li>            		
 	            	</div>
 	            </ul>            	
           </div>
