--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -63,8 +63,10 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
         	<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         		<h1 class="h2 js-title"></h1>
+        		<svg class="my-6 w-50 js-key" id="myKey" width="100" height="50"></svg>
         	</div>
-          <svg class="my-4 w-100 js-map" id="myMap" width="900" height="700"></svg>
+
+          	<svg class="my-4 w-100 js-map" id="myMap" width="900" height="700"></svg>
 			<div id="js-graph-content">
 	          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
 	          	
@@ -101,7 +103,6 @@
 	<script src="https://d3js.org/topojson.v2.min.js"></script>
 
 	<script src="js/cloudIndex.js" type="module"></script>
-	<script type="text/javascript" src="js/boardApp.js"></script>
 </body>
 
 </html>
