modify url and topics

--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -48,8 +48,8 @@
 						</a>
 					</li>	
 					<li class="nav-item">
-						<a class="nav-link" href="#" data-topic="Junk Food">
-						  Junk Food
+						<a class="nav-link" href="#" data-topic="Spelling">
+						  Spelling
 						</a>
 					</li> 
 
